--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -19,7 +19,7 @@ permissions:
 
 jobs:
   build_wheels:
-    name: Build wheels for ${{ matrix.os }}
+    name: Build wheels for ${{ matrix.os }} Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.runs-on }}
     strategy:
       matrix:
@@ -38,12 +38,12 @@ jobs:
             platform: ios
     steps:
       - uses: actions/checkout@v5
-      - name: Set up Python ${{ matrix.python-version }}
-      - uses: actions/setup-python@v5
+      - name: Set up Python ${{ matrix.python-version }} on ${{ matrix.os }}
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Build wheels
-      - uses: pypa/cibuildwheel@v3.2.0
+      - name: Build wheels pypa step on ${{ matrix.os }} Python ${{ matrix.python-version }}
+        uses: pypa/cibuildwheel@v3.2.0
         env:
           CIBW_PLATFORM: ${{ matrix.platform || 'auto' }}
           CIBW_ARCHS: ${{ matrix.archs || 'auto' }}
