--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -54,6 +54,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install OpenMP-enabled Clang
+        run: |
+          brew install llvm libomp
+          echo "CC=/usr/local/opt/llvm/bin/clang" >> $GITHUB_ENV
+          echo "CXX=/usr/local/opt/llvm/bin/clang++" >> $GITHUB_ENV
       - name: Build wheels pypa step on ${{ matrix.os }} Python ${{ matrix.python-version }}
         uses: pypa/cibuildwheel@v3.2.0
         env:
