--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -60,6 +60,7 @@ jobs:
           brew install llvm libomp
           echo "CC=/usr/local/opt/llvm/bin/clang" >> $GITHUB_ENV
           echo "CXX=/usr/local/opt/llvm/bin/clang++" >> $GITHUB_ENV
+          echo "MACOSX_DEPLOYMENT_TARGET=14.0" >> $GITHUB_ENV
       - name: Build wheels pypa step on ${{ matrix.os }} Python ${{ matrix.python-version }}
         uses: pypa/cibuildwheel@v3.2.0
         env:
