--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install OpenMP-enabled Clang
-        if: ${{ runner.os == 'macos-intel' || runner.os == 'macos-arm' }}
+        if: ${{ (runner.os == 'macos-intel') || (runner.os == 'macos-arm') }}
         run: |
           brew install llvm libomp
           echo "CC=/usr/local/opt/llvm/bin/clang" >> $GITHUB_ENV
