--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -33,9 +33,6 @@ jobs:
           - os: macos-intel
             python-version: 3.12
             runs-on: macos-15-intel
-          - os: macos-arm
-            python-version: 3.12
-            runs-on: macos-latest
           - os: linux-intel
             python-version: 3.13
             runs-on: ubuntu-latest
@@ -45,21 +42,19 @@ jobs:
           - os: macos-intel
             python-version: 3.13
             runs-on: macos-15-intel
-          - os: macos-arm
-            python-version: 3.13
-            runs-on: macos-latest
     steps:
       - uses: actions/checkout@v5
+      - name: Install OpenMP-enabled Clang
+        if: matrix.os == 'macos-intel'
+        run: |
+          echo "MACOSX_DEPLOYMENT_TARGET=14.0" >> $GITHUB_ENV
+          brew install llvm libomp
+          echo "CC=/usr/local/opt/llvm/bin/clang" >> $GITHUB_ENV
+          echo "CXX=/usr/local/opt/llvm/bin/clang++" >> $GITHUB_ENV
       - name: Set up Python ${{ matrix.python-version }} on ${{ matrix.os }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install OpenMP-enabled Clang
-        if: ${{ (matrix.os == 'macos-intel') || (matrix.os == 'macos-arm') }}
-        run: |
-          brew install llvm libomp
-          echo "CC=/usr/local/opt/llvm/bin/clang" >> $GITHUB_ENV
-          echo "CXX=/usr/local/opt/llvm/bin/clang++" >> $GITHUB_ENV
       - name: Build wheels pypa step on ${{ matrix.os }} Python ${{ matrix.python-version }}
         uses: pypa/cibuildwheel@v3.2.0
         env:
